fixed: add-repeat (+) button not aligned properly in Grid theme when no repeats exist,
(was regression caused by https://github.com/kobotoolbox/enketo-express/issues/918)

--- a/src/sass/core/_main.scss
+++ b/src/sass/core/_main.scss
@@ -524,7 +524,7 @@ select {
     }
 }
 
-.or-repeat:not(:empty)+.or-repeat-info {
+.or-repeat-info:not(:empty) {
     padding-top: 10px;
 }
 
